--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "survey-website",
   "version": "1.0.0",
@@ -12,5 +11,9 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "tailwindcss": "^2.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.15"
   }
 }
