--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,5 +11,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "tailwindcss": "^2.0.0"
-  }
+  },
+  "devDependencies": {
+  "autoprefixer": "^10.2.5",
+  "postcss": "^8.2.15"
 }
